[package]
name = "zcash-hsmbuilder"
description = "Library to build transactions for HSM apps"
version = "0.7.0"
license = "Apache-2.0"
authors = ["Zondax AG <hello@zondax.ch>"]
homepage = "https://github.com/Zondax/ledger-zcash-rs"
repository = "https://github.com/Zondax/ledger-zcash-rs"
readme = "README.md"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "zcash"]
edition = "2021"
autobenches = false

[lib]
name = "zcash_hsmbuilder"

[features]
default = ["zcash_proofs"]
bundled-prover = ["wagyu-zcash-parameters"]
local-prover = []

[dependencies]
bellman = { version = "0.13", default-features = false, features = ["groth16"] }
blake2b_simd = "1"
bls12_381 = { version = "0.7" }
byteorder = "1.4.3"
cfg-if = "1.0.0"
chacha20poly1305 = "0.9"
ff = "0.12"
group = "0.12"
hex = { version = "0.4", default-features = false }
jubjub = { version = "0.9", default-features = false }
lazy_static = "1"
pairing = { version = "0.22" }
rand = { version = "0.8", default-features = false }
rand_core = "0.6"
ripemd = "0.1"
secp256k1 = { version = "0.21" }
sha2 = "0.9"
serde_derive = "1"
serde = { version = "1", features = ["derive"] }

#zcash
wagyu-zcash-parameters = { version = "0.2", optional = true }

zcash_primitives = { version = "0.7", features = ["transparent-inputs"] }
zcash_proofs = { version = "0.7", features = ["multicore"], optional = true }
zcash_note_encryption = { version = "0.1", features = ["pre-zip-212"] }

tokio = { version = "1.6", features = ["sync"] }
educe = "0.4.19"
log = "0.4.17"
