[package]
name = "ledger-zcash"
description = "Library to integrate with the Ledger Zcash app"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/Zondax/ledger-zcash-rs"
repository = "https://github.com/Zondax/ledger-zcash-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "zcash"]
edition     = "2018"
autobenches = false

[badges]
circle-ci = { repository = "zondax/ledger-zcash-rs" }

[lib]
name = "ledger_zcash"

[dependencies]
byteorder = "1.3.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.20"
log="0.4.11"

zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs", branch="master" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs", branch="master" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs", branch="master" }
hex = "0.4.2"
zcashtools = { path = "../zcashtools" }
jubjub = { version = "0.5.1", default-features = false }

[dependencies.zcash_primitives]
version = "0.4.0"
features=["transparent-inputs"]

[dev-dependencies]
futures = "0.3.5"
matches = "0.1.8"
serial_test = "0.4.0"
env_logger = "0.7.1"
secp256k1 = "0.17.2"
tokio = { version = "0.2", features = ["full"] }
tokio-test = "0.2.1"

[profile.release]
overflow-checks = true
