[package]
name = "ledger-zcash"
description = "Library to integrate with the Ledger Zcash app"
version = "0.5.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <hello@zondax.ch>"]
homepage = "https://github.com/Zondax/ledger-zcash-rs"
repository = "https://github.com/Zondax/ledger-zcash-rs"
readme = "README.md"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "zcash"]
edition = "2021"
autobenches = false

[lib]
name = "ledger_zcash"

[features]
default = ["normal-zcash"]
normal-zcash = ["zcash_primitives", "zcash-hsmbuilder/normal-zcash"]
zecwallet-compat = ["zecw_primitives", "zcash-hsmbuilder/zecwallet-compat"]

[dependencies]
byteorder = "1.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
log = "0.4.17"
zx-bip44 = "0.1.0"
hex = "0.4.3"
jubjub = { version = "0.5.1", default-features = false }
secp256k1 = { version = "0.20", default-features = false }
group = "0.8.0"
sha2 = "0.9"
rand_core = "0.5"
arrayvec = "0.7.2"
ripemd = "0.1.1"
ff = "0.8"

ledger-transport = "0.9.0"
ledger-zondax-generic = "0.9.1"

#zcash
zcash-hsmbuilder = { path = "../zcash-hsmbuilder", default-features = false, version = "0.3" }
zcash_primitives = { version = "0.5", features = ["transparent-inputs"], optional = true }

#zecwallet-compat
zecw_primitives = { git = "https://github.com/adityapk00/librustzcash", rev = "adeb3ec4ad15480482bc2962bc9fe453814db9ee", features = ["transparent-inputs"], optional = true, package = "zcash_primitives" }

[dev-dependencies]
futures = "0.3.21"
matches = "0.1.9"
serial_test = "0.7.0"
env_logger = { version = "0.9.0", default-features = false }
tokio = { version = "1", features = ["full"] }
ledger-transport-hid = "0.9.0"
