[package]
name = "ledger-zcash"
description = "Library to integrate with the Ledger Zcash app"
version = "0.5.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <hello@zondax.ch>"]
homepage = "https://github.com/Zondax/ledger-zcash-rs"
repository = "https://github.com/Zondax/ledger-zcash-rs"
readme = "README.md"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "zcash"]
edition = "2021"
autobenches = false

[lib]
name = "ledger_zcash"

[features]
default = ["normal-zcash"]
normal-zcash = ["zcash_primitives", "zcash-hsmbuilder/normal-zcash"]
zecwallet-compat = ["zecw_primitives", "zcash-hsmbuilder/zecwallet-compat"]

[dependencies]
arrayvec = "0.7.2"
byteorder = "1.4.3"
cfg-if = "1.0.0"
ff = "0.12"
group = "0.12"
lazy_static = "1"
hex = "0.4.3"
jubjub = { version = "0.9", default-features = false }
log = "0.4.17"
rand_core = "0.6"
ripemd = "0.1"
secp256k1 = { version = "0.21", default-features = false }
sha2 = "0.9"
thiserror = "1.0.31"
zx-bip44 = "0.1.0"

serde = { version = "1.0", features = ["derive"] }

ledger-transport = "0.9.0"
ledger-zondax-generic = "0.9.1"

#zcash
zcash-hsmbuilder = { path = "../zcash-hsmbuilder", default-features = false, version = "0.3" }
zcash_primitives = { version = "0.6", features = ["transparent-inputs"], optional = true }

#zecwallet-compat
zecw_primitives = { git = "https://github.com/adityapk00/librustzcash", rev = "7183acd2fe12ebf201cae5b871166e356273c481", features = ["transparent-inputs"], optional = true, package = "zcash_primitives" }
tokio = { version = "1.6", features = ["sync"] }

[dev-dependencies]
futures = "0.3.21"
matches = "0.1.9"
serial_test = "0.7.0"
env_logger = { version = "0.9.0", default-features = false }
tokio = { version = "1", features = ["full"] }
ledger-transport-hid = "0.9.0"
