[package]
name = "zcash-hsmbuilder"
description = "Library to build transactions for HSM apps"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <hello@zondax.ch>"]
homepage = "https://github.com/Zondax/ledger-zcash-rs"
repository = "https://github.com/Zondax/ledger-zcash-rs"
readme = "README.md"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "zcash"]
edition = "2018"
autobenches = false

[lib]
name = "zcash_hsmbuilder"

[features]
default = ["normal-zcash"]
normal-zcash = [ "zcash_primitives", "zcash_proofs" ]
zecwallet-compat = [ "zecw_primitives", "zecw_proofs" ]
#local tx prover features
bundled-prover = ["wagyu-zcash-parameters"]
local-prover = []

[dependencies]
jubjub = { version = "0.5.1", default-features = false }
bellman = { version = "0.8", default-features = false, features = ["groth16"] }
blake2b_simd = "0.5"
bls12_381 = { version = "0.3.1" }
byteorder = "1.4.3"
ff = { version = "0.8.0" }
lazy_static = "1"
pairing = { version = "0.22" }
rand_core = "0.5"
hex = { version = "0.4", default-features = false }
group = "0.8.0"
rand = { version = "0.7.3", default-features = false }
crypto_api_chachapoly = "0.5.0"
secp256k1 = { version = "0.20" }
sha2 = "0.9"
ripemd160 = "0.9"
cfg-if = "1.0.0"

serde_derive = "1"
serde = { version = "1", features = ["derive"] }

#zcash
wagyu-zcash-parameters = { version = "0.2", optional = true }
zcash_primitives = { version = "0.5", features = ["transparent-inputs"], optional = true }
zcash_proofs = { version = "0.5", features = ["multicore"], optional = true }

#zecwallet-compat
zecw_primitives = { git = "https://github.com/adityapk00/librustzcash", rev = "adeb3ec4ad15480482bc2962bc9fe453814db9ee", features = ["transparent-inputs"], optional = true, package = "zcash_primitives" }
zecw_proofs = { git = "https://github.com/adityapk00/librustzcash", rev = "adeb3ec4ad15480482bc2962bc9fe453814db9ee", features = ["multicore"], optional = true, package = "zcash_proofs" }
tokio = { version = "1.6", features = ["sync"] }
